--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,38 @@
 h2 {
-  font-family: 'Roboto';
+  font-family: monospace;
   color:black;
+}
+
+h3 {
+  font-size: 10px;
+  font-family: monospace;
+  color:gray;
+}
+
+div {
+  display: flex;
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center;
 }
 
 body {
   background-color: rgb(255, 255, 255);
 }
 
+.label {
+  font-family: "Roboto";
+  font-size: medium;
+  color:black;
+}
+
 .button {
   color: white;
   background-color: gray;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 .about-container {
-  font-family: "Roboto";
+  font-family:"cursive";
   font-size: 25px;
   color: black; 
   padding: 20px;
@@ -49,7 +64,8 @@ body {
 }
 
 .carousel-image {
-  width: 400px; 
-  height: 400px; 
+  width: 300px; 
+  height: 300px; 
   border: 6px solid black;
+  margin:auto;
 }
