--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,11 @@ body {
   background-color: gray;
 }
 
+.warning {
+  color:red;
+  font-size: small;
+}
+
 .about-container {
   font-family:"cursive";
   font-size: 25px;
