--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ div {
 
 body {
   background-color: rgb(255, 255, 255);
+  width: 100%;
 }
 
 .label {
@@ -36,6 +37,11 @@ body {
   font-size: small;
 }
 
+.success {
+  color:rgb(22, 215, 22);
+  font-size: small;
+}
+
 .about-container {
   font-family:"cursive";
   font-size: 25px;
@@ -47,7 +53,7 @@ body {
 
 .title-container {
   display: flex;
-  justify-content: center;
+  align-items: center;
   color: rgb(37, 115, 6);
   font-size: 30px;
   font-family: 'Roboto';
