--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,33 @@ body {
   width: 100%;
 }
 
+.text {
+  font-family: monospace;
+  color: black;
+}
+
+.subtitle {
+  font-family: monospace;
+  color: black;
+  font-size: large;
+  font-weight: 600;
+}
+
+.text-background {
+  background-color: #f0f0f0; 
+  padding: 20px; 
+  border-radius: 10px; 
+  margin-bottom: 20px; 
+}
+
+.sub-background {
+  background-color: rgb(187, 236, 187);
+  padding-left: 50px; 
+  padding-right: 50px;
+  border-radius: 10px; 
+  margin-bottom: 20px; 
+}
+
 .label {
   font-family: "Roboto";
   font-size: medium;
