--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,21 @@ body {
 }
 
 .button {
-  color: white;
-  background-color: gray;
+  color: rgb(16, 16, 16);
+  background-color:rgb(215, 252, 215);;
+  border-color: rgb(129, 129, 129);
+  border-width: 4px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row; 
+  gap: 15px;
+  justify-content: flex-start;
+}
+
+.home-page {
+  background-image: linear-gradient(90deg, rgb(195, 228, 162), rgb(234, 255, 215) 45%, rgb(195, 228, 162));
 }
 
 .warning {
