--- a/src/App.css
+++ b/src/App.css
@@ -120,3 +120,22 @@ body {
   border: 6px solid black;
   margin:auto;
 }
+
+.recipe-box {
+  flex: auto;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: rgb(181, 245, 181);
+  border: 6px solid black;
+  width: 100vh;
+  height: 120vh; 
+}
+
+.recipe-dropdown {
+  flex: auto;
+  align-items: right;
+  color: black;
+}
