--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,17 @@ body {
   color: black;
 }
 
+.profile-text {
+  font-family: monospace;
+  color: black;
+  font-size: 20px;
+}
+
+.profile-image {
+  height: 60px;
+  width: 60px;
+}
+
 .subtitle {
   font-family: monospace;
   color: black;
