--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,13 @@ body {
   margin-bottom: 20px; 
 }
 
+.ingredient-background {
+  background-color: #329b31; 
+  padding: 20px; 
+  border-radius: 10px; 
+  margin-bottom: 20px; 
+}
+
 .sub-background {
   background-color: rgb(187, 236, 187);
   padding-left: 50px; 
@@ -73,6 +80,7 @@ body {
 }
 
 .button-container {
+  margin-top: 20px;
   display: flex;
   flex-direction: row; 
   gap: 15px;
@@ -128,6 +136,16 @@ body {
   1px 1px 0 #000;
 }
 
+.choose {
+  background-color: #E6F5E6;
+  color: #4F8A10; 
+  border: 1px solid #4F8A10; 
+  padding: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
 .recipe-carousel{
   color: black;
   justify-content: center;
@@ -148,6 +166,7 @@ body {
 .recipe-box {
   flex: auto;
   align-items: center;
+  justify-content: flex-start;
   margin-top: 20px;
   margin-bottom: 20px;
   padding-left: 30px;
@@ -156,6 +175,20 @@ body {
   border: 6px solid black;
   width: 100vh;
   height: 120vh; 
+}
+
+
+.sort-box {
+  flex: auto;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: rgb(181, 245, 181);
+  border: 6px solid black;
+  width: 40vh;
+  height: 60vh; 
 }
 
 .recipe-dropdown {
