--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,15 @@ body {
   margin-bottom: 20px; 
 }
 
+.store-background {
+  background-color: #f0f0f0; 
+  padding: 20px; 
+  border-radius: 10px; 
+  margin-bottom: 33.3vh;
+  margin-top: 100px;
+}
+
+
 .ingredient-background {
   background-color: #329b31; 
   padding: 20px; 
@@ -89,6 +98,7 @@ body {
 
 .home-page {
   background-image: linear-gradient(90deg, rgb(195, 228, 162), rgb(234, 255, 215) 45%, rgb(195, 228, 162));
+  width: 100%;
 }
 
 .warning {
@@ -113,14 +123,23 @@ body {
 .title-container {
   display: flex;
   align-items: center;
-  color: rgb(37, 115, 6);
+  color: rgb(57, 69, 52);
   font-size: 30px;
   font-family: 'Roboto';
   text-shadow: 
-    -3.5px -3.5px 0 #000,  
-     1px -1px 0 #000,
-    -1px  1px 0 #000,
-     0px  0px 0 #000;
+    -2px -2px 0 rgba(0, 0, 0, 0.2),  
+     2px -2px 0 rgba(0, 0, 0, 0.2),
+    -2px  2px 0 rgba(0, 0, 0, 0.2),
+     2px  2px 0 rgba(0, 0, 0, 0.2);
+}
+
+
+.sample-container {
+  display: flex;
+  align-items: center;
+  color: rgb(57, 69, 52);
+  font-size: 30px;
+  font-family: 'Roboto';
 }
 
 .recipe-title {
@@ -195,4 +214,25 @@ body {
   flex: auto;
   align-items: right;
   color: black;
+}
+
+.logo {
+  width: 90px; 
+  height: auto; 
+}
+
+.logo-container {
+  position: relative;
+  top: 15px; 
+  display: inline-block; 
+}
+
+.about {
+  text-align: center; 
+  color: rgb(57, 69, 52); 
+  font-size: 18px; 
+  line-height: 1.5; 
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 20px; 
+  font-size: 24px;
 }
