--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,22 @@ body {
   width: 100%;
 }
 
+.instruction-index {
+  font-size: 12px; 
+  font-weight: bold; 
+  color: #053311; 
+  margin-right: 5px; 
+}
+
 .text {
   font-family: monospace;
   color: black;
+}
+
+.recipe-text {
+  font-family: monospace;
+  color: black;
+  font-size: large;
 }
 
 .profile-text {
@@ -236,3 +249,4 @@ body {
   margin-bottom: 20px; 
   font-size: 24px;
 }
+
